Updated header links

--- a/coming_soon.html
+++ b/coming_soon.html
@@ -36,13 +36,13 @@
 							<li>
 								<a href="#">About Us</a>
 								<ul>
-									<li><a href="left-sidebar.html">Leadership</a></li>
-									<li><a href="right-sidebar.html">Sponsers</a></li>
-									<li><a href="no-sidebar.html">VEX Overveiw</a></li>
+									<li><a href="coming_soon.html">Leadership</a></li>
+									<li><a href="coming_soon.html">Sponsers</a></li>
+									<li><a href="coming_soon.html">VEX Overveiw</a></li>
 								</ul>
 							</li>
-							<li><a href="elements.html">Calender</a></li>
-							<li><a href="elements.html">Documents</a></li>
+							<li><a href="coming_soon.html">Calender</a></li>
+							<li><a href="coming_soon.html">Documents</a></li>
 							<li><a href="#" class="button primary">Contact Us</a></li>
 						</ul>
 					</nav>
