typo: Doners to Donors

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 				<section id="four" class="wrapper style1 special fade-up">
 					<div class="container">
 						<header class="major">
-							<h2>Sponsers and Doners</h2>
+							<h2>Sponsers and Donors</h2>
 							<p>Partner with us!</p>
 						</header>
 						<div class="content">
