Contact Us in progress

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 							</li>
 							<li><a href="coming_soon.html">Calender</a></li>
 							<li><a href="coming_soon.html">Documents</a></li>
-							<li><a href="coming_soon.html" class="button primary">Contact Us</a></li>
+							<li><a href="contact_us.html" class="button primary">Contact Us</a></li>
 						</ul>
 					</nav>
 				</header>
