--- a/contact_us.html
+++ b/contact_us.html
@@ -96,8 +96,8 @@
                     <li><a href="https://www.ltisdschools.org/">LTISD</a></li>
                     <li><a href="https://www.ltisdschools.org/domain/9">LTMS</a></li>
                     <li>Website Design by <a href="http://html5up.net">HTML5 UP</a></li>
-                    <li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-                    <li><a href="#" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
+                    <li><a href="https://github.com/LTMSRobotics/" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+                    <li><a href="contact_us.html" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
                 </ul>
             </footer>
 
