--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                         </p>
                         <footer class="major">
                             <ul class="actions special">
-                                <li><a href="#" class="button">Contact Us</a></li>
+                                <li><a href="contact_us.html" class="button">Contact Us</a></li>
                             </ul>
                         </footer>
 					</div>
@@ -149,8 +149,8 @@
                     <li><a href="https://www.ltisdschools.org/">LTISD</a></li>
                     <li><a href="https://www.ltisdschools.org/domain/9">LTMS</a></li>
                     <li>Website Design by <a href="http://html5up.net">HTML5 UP</a></li>
-                    <li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-                    <li><a href="#" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
+                    <li><a href="https://github.com/LTMSRobotics/" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+                    <li><a href="contact_us.html" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
                 </ul>
             </footer>
 
