--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                                 </section>
                                 <section class="col-4 col-6-medium col-12-xsmall">
                                     
-										<img src="images/silver_star.png" alt="" height="50" width="50"/>
+										<img src="images/bronze_star.png" alt="" height="50" width="50"/>
 									
                                     <h3>Bronze</h3>
                                     <p>$500</p>
