Updated Donor verbiage to include ein

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 						</header>
 						<p>We are thrilled to launch the Robotics Club at Lake Travis Middle School for the 2023-24 school year, led by Mr. Wayne Ostrout, our dedicated engineering teacher who serves as our Robotics coach.</p>
                         
-                        <p>Our club comprises six middle school teams, each benefiting from the mentorship of students from the LTHS Robotics Club. Under the guidance of their coach, Mr. Eric Fogle, the LTHS Robotics program has achieved great success, with three teams earning a spot at VEX Worlds! We feel incredibly fortunate to have their expertise and support as we introduce Robotics to the students at Lake Travis Middle School.</p>
+                        <p>Our club comprises 6 teams, each benefiting from the mentorship of students from the LTHS Robotics Club. Under the guidance of their coach, Mr. Eric Fogle, the LTHS Robotics program has achieved great success, with three teams earning a spot at VEX Worlds! We feel incredibly fortunate to have their expertise and support as we introduce Robotics to the students at LTMS.</p>
 					</div>
 					<a href="#three" class="goto-next scrolly">Next</a>
 				</section>
@@ -128,7 +128,7 @@
                             </div>
                         </div>
 						<p>
-                            To become a sponsor or make a donation, please contact us. We would be delighted to provide more information about our sponsorship opportunities and answer any questions you may have.
+                            To become a sponsor or make a donation, please contact us. We are an exempt organization as described in Section 501(c)(3) of the Internal Revenue Code; Federal EIN #742187328. We would be delighted to provide more information about our sponsorship opportunities and answer any questions you may have. 
                             
                             Thank you for your consideration and support. With your partnership, we can make a lasting impact on the lives of our students.
                         </p>
