Document page update

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 					<h1 id="logo"><a href="index.html">LTMS Robotics</a></h1>
 					<nav id="nav">
 						<ul>
-							<li><a href="index.html">Our Teams</a>
+							<li><a href="#">Our Teams</a>
 								<ul>
 									<li><a href="coming_soon.html">Team 1</a></li>
 									<li><a href="coming_soon.html">Team 2</a></li>
@@ -61,7 +61,7 @@
 								</ul>
 							</li>
 							<li><a href="coming_soon.html">Calender</a></li>
-							<li><a href="coming_soon.html">Documents</a></li>
+							<li><a href="documents.html">Documents</a></li>
 							<li><a href="contact_us.html" class="button primary">Contact Us</a></li>
 						</ul>
 					</nav>
