logo and hash update

--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
 				</section>
 
 			
-			<!-- Two -->
-				<section id="two" class="spotlight style2 right">
+			<!-- one -->
+				<section id="one" class="spotlight style2 right">
 					<span class="image fit main"><img src="images/pic03.jpg" alt="" /></span>
 					<div class="content">
 						<header>
@@ -94,11 +94,11 @@
                         
                         <p>Our club comprises 6 teams, each benefiting from the mentorship of students from the LTHS Robotics Club. Under the guidance of their coach, Mr. Eric Fogle, the LTHS Robotics program has achieved great success, with three teams earning a spot at VEX Worlds! We feel incredibly fortunate to have their expertise and support as we introduce Robotics to the students at LTMS.</p>
 					</div>
-					<a href="#three" class="goto-next scrolly">Next</a>
+					<a href="#two" class="goto-next scrolly">Next</a>
 				</section>
 
-			<!-- Three -->
-				<section id="three" class="spotlight style3 left">
+			<!-- two -->
+				<section id="two" class="spotlight style3 left">
 					<span class="image fit main bottom"><img src="images/pic04.png" alt="" /></span>
 					<div class="content">
 						<header>
@@ -106,11 +106,11 @@
 						</header>
 						<p>The Robotics Club aims to inspire and empower our students by providing them with hands-on experience in robotics and STEM education. Through engaging activities, competitions, and project-based learning, our club fosters critical thinking, problem-solving skills, teamwork, and creativity. By participating in the club, students will develop a passion for robotics and gain valuable skills that will benefit them in their academic and professional futures.</p>
 					</div>
-					<a href="#four" class="goto-next scrolly">Next</a>
+					<a href="#three" class="goto-next scrolly">Next</a>
 				</section>
 
-			<!-- Four -->
-				<section id="four" class="wrapper style1 special fade-up">
+			<!-- three -->
+				<section id="three" class="wrapper style1 special fade-up">
 					<div class="container">
 						<header class="major">
 							<h2>Sponsers and Donors</h2>
