--- a/contact_us.html
+++ b/contact_us.html
@@ -107,7 +107,7 @@
 						<header class="major">
 							<h2>Contact Us</h2>
 						</header>
-						<div>Please email Mr. Wayne Ostrout: ostroutw@ltisdschools.org, for questions about LTMS Robotics.
+						<div>Please email us: LTMSRobotics@gmail.com, for questions about LTMS Robotics.
 						</div>
 					</div>
 				</div>
