Documents and sponsor update

--- a/documents.html
+++ b/documents.html
@@ -99,8 +99,8 @@
 								</tr>
 							  
 								<tr>
-								  <td>Sponsorship Form</td>
-								  <td>Want to Sponsor LTMS robotics? Complete this form.</td>
+								  <td>Donation Receipt</td>
+								  <td>Download our donation receipt.</td>
 								  <td><a href="assets/ltms_donation_receipt.pdf" class="button primary small icon solid fa-download" target="_blank">Donation Receipt</a></td>
 								  </tr>
 							  
