--- a/index.html
+++ b/index.html
@@ -110,10 +110,19 @@
 				</section>
 
 			<!-- three -->
-				<section id="three" class="wrapper style1 special fade-up">
+			<section id="three" class="wrapper style1 special fade-up">
+				<div class="container">
+					<header class="major">
+						<h2>Our Sponsors</h2>
+					</header>
+					<div class="content"><img src="images/ecostate_logo.PNG"> </div>
+				</div>
+			</section>
+			<!-- four -->
+				<section id="four" class="wrapper style1 special fade-up">
 					<div class="container">
 						<header class="major">
-							<h2>Sponsers and Donors</h2>
+							<h2>Sponsors and Donors</h2>
 							<p>Partner with us!</p>
 						</header>
 						<div class="content">
