--- a/calender.html
+++ b/calender.html
@@ -8,7 +8,7 @@
 -->
 <html>
 	<head>
-		<title>LTMS Robotics | Coming soon</title>
+		<title>LTMS Robotics | Calender</title>
 		<!-- https://favicomatic.com/ -->
 		<link rel="apple-touch-icon-precomposed" sizes="57x57" href="images/favicon/apple-touch-icon-57x57.png" />
 		<link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/favicon/apple-touch-icon-114x114.png" />
@@ -72,8 +72,11 @@
 				<div id="main" class="wrapper style1">
 					<div class="container">
 						<header class="major">
-							<h2>Coming soon</h2>
-						</header>
+							<h2>Calender</h2>
+						
+						<div><iframe src="https://calendar.google.com/calendar/embed?src=ltmsrobotics%40gmail.com&ctz=America%2FChicago" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+						</div>
+					</header>
 					</div>
 				</div>
 			<!-- Footer -->
