--- a/contact_us.html
+++ b/contact_us.html
@@ -95,7 +95,7 @@
 									<li><a href="coming_soon.html">VEX Overveiw</a></li>
 								</ul>
 							</li>
-							<li><a href="coming_soon.html">Calender</a></li>
+							<li><a href="calender.html">Calender</a></li>
 							<li><a href="documents.html">Documents</a></li>
 							<li><a href="contact_us.html" class="button primary">Contact Us</a></li>
 						</ul>
