--- a/calender.html
+++ b/calender.html
@@ -8,7 +8,7 @@
 -->
 <html>
 	<head>
-		<title>LTMS Robotics | Calender</title>
+		<title>LTMS Robotics | Calendar</title>
 		<!-- https://favicomatic.com/ -->
 		<link rel="apple-touch-icon-precomposed" sizes="57x57" href="images/favicon/apple-touch-icon-57x57.png" />
 		<link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/favicon/apple-touch-icon-114x114.png" />
@@ -62,7 +62,7 @@
 									<li><a href="coming_soon.html">VEX Overveiw</a></li>
 								</ul>
 							</li>
-							<li><a href="calender.html">Calender</a></li>
+							<li><a href="calender.html">Calendar</a></li>
 							<li><a href="documents.html">Documents</a></li>
 							<li><a href="contact_us.html" class="button primary">Contact Us</a></li>
 						</ul>
@@ -72,7 +72,7 @@
 				<div id="main" class="wrapper style1">
 					<div class="container">
 						<header class="major">
-							<h2>Calender</h2>
+							<h2>Calendar</h2>
 						
 						<div><iframe src="https://calendar.google.com/calendar/embed?src=ltmsrobotics%40gmail.com&ctz=America%2FChicago" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
 						</div>
