center Iframe and Calendar typo

--- a/calendar.html
+++ b/calendar.html
@@ -62,7 +62,7 @@
 									<li><a href="coming_soon.html">VEX Overveiw</a></li>
 								</ul>
 							</li>
-							<li><a href="calender.html">Calendar</a></li>
+							<li><a href="calendar.html">Calendar</a></li>
 							<li><a href="documents.html">Documents</a></li>
 							<li><a href="contact_us.html" class="button primary">Contact Us</a></li>
 						</ul>
@@ -73,10 +73,9 @@
 					<div class="container">
 						<header class="major">
 							<h2>Calendar</h2>
-						
-						<div><iframe src="https://calendar.google.com/calendar/embed?src=ltmsrobotics%40gmail.com&ctz=America%2FChicago" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+						</header>
+						<div style="margin: auto; text-align: center;"><iframe src="https://calendar.google.com/calendar/embed?src=ltmsrobotics%40gmail.com&ctz=America%2FChicago" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
 						</div>
-					</header>
 					</div>
 				</div>
 			<!-- Footer -->
