--- a/coming_soon.html
+++ b/coming_soon.html
@@ -62,7 +62,7 @@
 									<li><a href="coming_soon.html">VEX Overveiw</a></li>
 								</ul>
 							</li>
-							<li><a href="calender.html">Calender</a></li>
+							<li><a href="calendar.html">calendar</a></li>
 							<li><a href="documents.html">Documents</a></li>
 							<li><a href="contact_us.html" class="button primary">Contact Us</a></li>
 						</ul>
