--- a/contact_us.html
+++ b/contact_us.html
@@ -95,7 +95,7 @@
 									<li><a href="coming_soon.html">VEX Overveiw</a></li>
 								</ul>
 							</li>
-							<li><a href="calender.html">Calender</a></li>
+							<li><a href="calendar.html">Calendar</a></li>
 							<li><a href="documents.html">Documents</a></li>
 							<li><a href="contact_us.html" class="button primary">Contact Us</a></li>
 						</ul>
@@ -107,10 +107,13 @@
 						<header class="major">
 							<h2>Contact Us</h2>
 						</header>
-						<div>Please email us: LTMSRobotics@gmail.com, for questions about LTMS Robotics.
-						</div>
+					</div>
+					<div style="margin: auto; text-align: center;">
+						<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSe2Tx0r2SQdl1Wu52zoD8DH0RuVmxiMToLZq9-_QFjQ_lNqYw/viewform?embedded=true" 
+						scrolling ="no" width="900" height="945" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 					</div>
 				</div>
+				
 			<!-- Footer -->
 			<footer id="footer">        
                 <ul class="copyright">
