--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 									<li><a href="coming_soon.html">VEX Overveiw</a></li>
 								</ul>
 							</li>
-							<li><a href="calender.html">Calendar</a></li>
+							<li><a href="calendar.html">Calendar</a></li>
 							<li><a href="documents.html">Documents</a></li>
 							<li><a href="contact_us.html" class="button primary">Contact Us</a></li>
 						</ul>
