--- a/calendar.html
+++ b/calendar.html
@@ -74,7 +74,9 @@
 						<header class="major">
 							<h2>Calendar</h2>
 						</header>
-						<div style="margin: auto; text-align: center;"><iframe src="https://calendar.google.com/calendar/embed?src=ltmsrobotics%40gmail.com&ctz=America%2FChicago" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+						<div style="margin: auto; text-align: center;">
+							<iframe src="https://calendar.google.com/calendar/embed?src=ltmsrobotics%40gmail.com&ctz=America%2FChicago"
+							 style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
 						</div>
 					</div>
 				</div>
