vex overview update

--- a/contact_us.html
+++ b/contact_us.html
@@ -87,16 +87,10 @@
 									<li><a href="coming_soon.html">Team 6</a></li>
 								</ul>
 							</li>
-							<li>
-								<a href="#">About Us</a>
-								<ul>
-									<li><a href="coming_soon.html">Leadership</a></li>
-									<li><a href="coming_soon.html">Sponsers</a></li>
-									<li><a href="coming_soon.html">VEX Overveiw</a></li>
-								</ul>
-							</li>
+							<li><a href="coming_soon.html">About Us</a></li>
 							<li><a href="calendar.html">Calendar</a></li>
 							<li><a href="documents.html">Documents</a></li>
+							<li><a href="vex.html">VEX Overview</a></li>
 							<li><a href="contact_us.html" class="button primary">Contact Us</a></li>
 						</ul>
 					</nav>
@@ -110,7 +104,7 @@
 					</div>
 					<div style="margin: auto; text-align: center;">
 						<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSe2Tx0r2SQdl1Wu52zoD8DH0RuVmxiMToLZq9-_QFjQ_lNqYw/viewform?embedded=true" 
-						scrolling ="no" width="800" height="1020" frameborder="0" style="border: 0" >Loading…</iframe>
+						scrolling ="no" width="800" height="1040" frameborder="0" style="border: 0" >Loading…</iframe>
 
 						
 					</div>
