--- a/vex.html
+++ b/vex.html
@@ -8,7 +8,7 @@
 -->
 <html>
 	<head>
-		<title>LTMS Robotics | Calendar</title>
+		<title>LTMS Robotics | VEX Overview</title>
 		<!-- https://favicomatic.com/ -->
 		<link rel="apple-touch-icon-precomposed" sizes="57x57" href="images/favicon/apple-touch-icon-57x57.png" />
 		<link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/favicon/apple-touch-icon-114x114.png" />
@@ -31,10 +31,43 @@
 		<meta name="msapplication-wide310x150logo" content="images/favicon/mstile-310x150.png" />
 		<meta name="msapplication-square310x310logo" content="images/favicon/mstile-310x310.png" />
 
+
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<style>
+			.container {
+			  max-width: 400px;
+			  margin: 0 auto;
+			}
+		
+			input[type="text"],
+			input[type="email"],
+			textarea {
+			  width: 100%;
+			  padding: 10px;
+			  margin-bottom: 15px;
+			  border: 1px solid #ccc;
+			  box-sizing: border-box;
+			  font-family: Arial, sans-serif;
+			}
+		
+			textarea {
+			  height: 150px;
+			}
+		
+			input[type="submit"] {
+			  background-color: #4CAF50;
+			  color: white;
+			  border: none;
+			  cursor: pointer;
+			}
+		
+			input[type="submit"]:hover {
+			  background-color: #45a049;
+			}
+		  </style>
 	</head>
 	<body class="is-preload">
 		<div id="page-wrapper">
@@ -66,14 +99,15 @@
 				<div id="main" class="wrapper style1">
 					<div class="container">
 						<header class="major">
-							<h2>Calendar</h2>
+							<h2>VEX Overview</h2>
 						</header>
-						<div style="margin: auto; text-align: center;">
-							<iframe src="https://calendar.google.com/calendar/embed?src=ltmsrobotics%40gmail.com&ctz=America%2FChicago"
-							 style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
-						</div>
+					</div>
+					<div style="margin: auto; text-align: center;">
+						<iframe width="560" height="315" src="https://www.youtube.com/embed/dvDqEI7qO34" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+						<p>To learn more about this year's game visit <a href="https://www.vexrobotics.com/v5/competition/vrc-current-game">this link</a>.</p>
 					</div>
 				</div>
+				
 			<!-- Footer -->
 			<footer id="footer">        
                 <ul class="copyright">
