--- a/coming_soon.html
+++ b/coming_soon.html
@@ -54,16 +54,10 @@
 									<li><a href="coming_soon.html">Team 6</a></li>
 								</ul>
 							</li>
-							<li>
-								<a href="#">About Us</a>
-								<ul>
-									<li><a href="coming_soon.html">Leadership</a></li>
-									<li><a href="coming_soon.html">Sponsers</a></li>
-									<li><a href="coming_soon.html">VEX Overveiw</a></li>
-								</ul>
-							</li>
+							<li><a href="coming_soon.html">About Us</a></li>
 							<li><a href="calendar.html">Calendar</a></li>
 							<li><a href="documents.html">Documents</a></li>
+							<li><a href="vex.html">VEX Overview</a></li>
 							<li><a href="contact_us.html" class="button primary">Contact Us</a></li>
 						</ul>
 					</nav>
