VEX Overview update

--- a/vex.html
+++ b/vex.html
@@ -102,12 +102,19 @@
 							<h2>VEX Overview</h2>
 						</header>
 					</div>
-					<div style="margin: auto; text-align: center;">
+					<div style="margin: auto; padding-left: 10%; padding-right: 10%; text-align: center;">
+						<p>VEX Robotics Competition (VRC) involves teams of students who are tasked with designing and building a robot to play against other teams in a game-based engineering challenge.
+							This competition is for middle school, high school, and university students.</p>
+							<p>In the VRC, two alliances, each composed of two teams, compete in matches consisting of a fifteen-second Autonomous Period, followed by a one-minute and forty-five-second Driver Controlled Period.
+							The object of the game is to attain a higher score than the opposing Alliance by scoring game objects in goals and by elevating the bot at the end of the Match.
+							</p>
+							<p>Watch this video to learn about the 2023 2024 VRC game: Over Under</p>
+
 						<iframe width="560" height="315" src="https://www.youtube.com/embed/dvDqEI7qO34" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-						<p>To learn more about this year's game visit <a href="https://www.vexrobotics.com/v5/competition/vrc-current-game">this link</a>.</p>
+						<p>To learn more about this year's game visit <a href="https://www.vexrobotics.com/v5/competition/vrc-current-game" target="_blank">this link</a>.</p>
+						<p>To see the game manual, click <a href="https://vrc-kb.recf.org/hc/en-us/articles/9652912628631-Game-Manual-for-VRC-Teams" target="_blank">this link</a>.</p>
 					</div>
 				</div>
-				
 			<!-- Footer -->
 			<footer id="footer">        
                 <ul class="copyright">
