About us update

--- a/about_us.html
+++ b/about_us.html
@@ -8,7 +8,7 @@
 -->
 <html>
 	<head>
-		<title>LTMS Robotics | Coming soon</title>
+		<title>LTMS Robotics | About Us</title>
 		<!-- https://favicomatic.com/ -->
 		<link rel="apple-touch-icon-precomposed" sizes="57x57" href="images/favicon/apple-touch-icon-57x57.png" />
 		<link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/favicon/apple-touch-icon-114x114.png" />
@@ -66,12 +66,61 @@
 				<div id="main" class="wrapper style1">
 					<div class="container">
 						<header class="major">
-							<h2>Coming soon</h2>
+							<h2>About Us</h2>
 						</header>
+						<p>The Robotics Club at Lake Travis Middle School is led by Mr. Wayne Ostrout, our dedicated engineering teacher who serves as our Robotics coach.
+							Our club has 6 teams, each benefiting from the mentorship of students from the LTHS Robotics Club.
+							Under the guidance of their coach, Mr. Eric Fogle, the LTHS Robotics program has achieved great success, with three teams earning a spot at VEX Worlds!
+							We feel incredibly fortunate to have their expertise and support as we introduce Robotics to the students at LTMS.</p>
+							<header class="major">
+								<h2>Leadership</h2>
+							</header>
+						<table>
+							<thead>
+							  <tr>
+								<th>Position</th>
+								<th>Name</th>
+							  </tr>
+							</thead>
+							<tbody>							  
+								<tr>
+								  <td>Facilitator:</td>
+								  <td>Wayne Ostrout</td>
+								</tr>
+								<tr>
+									<td>Social Media Chair:</td>
+									<td>Robin Scott</td>
+								</tr>
+								<tr>
+									<td>Fundraising Chair:</td>
+									<td>Michelle Klopp</td>
+								  </tr>
+								<tr>
+									<td>Communications Chair:</td>
+									<td>Tuli Davenport</td>
+								</tr>
+								<tr>
+									<td>Treasurer:</td>
+									<td>Tuli Davenport</td>
+								  </tr>
+								<tr>
+									<td>Webmaster:</td>
+									<td>Raymond Davenport</td>
+								</tr>
+								<tr>
+									<td>LTHS Student Coach:</td>
+									<td>Ryan Vo, Satvik Kumar, Karen Bui, Matthew Williams, Preston Charad, Dinesh Nathaniel</td>
+								</tr>
+								<tr>
+									<td>Team Parent(s):</td>
+									<td>TBD</td>
+								</tr>
+							</tbody>
+						  </table>
 					</div>
 				</div>
 			<!-- Footer -->
-			<footer id="footer">        
+			<footer id="footer">
                 <ul class="copyright">
                     <li>&copy; 2023 LTMS Robotics. All rights reserved. </li>
                     <li><a href="https://www.ltisdschools.org/">LTISD</a></li>
