--- a/calendar.html
+++ b/calendar.html
@@ -54,7 +54,7 @@
 									<li><a href="coming_soon.html">Team 6</a></li>
 								</ul>
 							</li>
-							<li><a href="coming_soon.html">About Us</a></li>
+							<li><a href="about_us.html">About Us</a></li>
 							<li><a href="calendar.html">Calendar</a></li>
 							<li><a href="documents.html">Documents</a></li>
 							<li><a href="vex.html">VEX Overview</a></li>
