updated sponsor logos

--- a/index.html
+++ b/index.html
@@ -109,7 +109,11 @@
 					<header class="major">
 						<h2>Our Sponsors</h2>
 					</header>
-					<div class="content"><img src="images/ecostate_logo.PNG"> </div>
+					<div class="content">
+						<img src="images/ecoestate.png">
+						<img src="images/loveandcookies.png">
+						<img src="images/longhorndermatology.png"> 
+					</div>
 				</div>
 			</section>
 			<!-- four -->
