added leftys sponsor

--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
 						<img src="images/ecoestate.png">
 						<img src="images/loveandcookies.png">
 						<img src="images/longhorndermatology.png"> 
+						<img src="images/leftyspizza.png">
 					</div>
 				</div>
 			</section>
